k8s/deployment/rolling-update.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aceest-app
  labels:
    app: aceest-app
spec:
  replicas: 4
  selector:
    matchLabels:
      app: aceest-app
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: aceest-app
    spec:
      containers:
        - name: aceest-backend
          image: docker.io/rajswastik/aceest-fitness-backend:latest
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: aceest-app
spec:
  selector:
    app: aceest-app
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
      name: http
  type: ClusterIP
# Rolling update strategy ensures pods are updated gradually with minimal downtime.
